--- a/index.html
+++ b/index.html
@@ -282,26 +282,26 @@
                      </p>
                      <div class="form__label-box">
                          <label class="form__label">
-                             <input class="form__input-radio" type="radio">
+                             <input class="form__input-radio" type="radio" name="radio">
                              <div class="form__bike">
                                  <img class="form__bike-img" src="images/bike-grey.jpg" alt="">
-                                 <p class="form__bike-price">33999 грн.</p>
+                                 <p class="form__bike-price"><span>33999 грн.</span></p>
                              </div>
                              <div class="form__radio-style form__radio-style--grey"></div>
                          </label>
                          <label class="form__label">
-                            <input class="form__input-radio" type="radio">
+                            <input class="form__input-radio" type="radio" name="radio" checked>
                             <div class="form__bike">
                                 <img class="form__bike-img" src="images/bike-white.jpg" alt="">
-                                <p class="form__bike-price">32999 грн.</p>
+                                <p class="form__bike-price"><span>32999 грн.</span></p>
                             </div>
-                            <div class="form__radio-style form__radio-style--white"></div>
+                            <div class="form__radio-style form__radio-style--white "></div>
                         </label>
                         <label class="form__label">
-                            <input class="form__input-radio" type="radio">
+                            <input class="form__input-radio" type="radio" name="radio">
                             <div class="form__bike">
                                 <img class="form__bike-img" src="images/bike-red.jpg" alt="">
-                                <p class="form__bike-price">35999 грн.</p>
+                                <p class="form__bike-price"><span>35999 грн.</span></p>
                             </div>
                             <div class="form__radio-style form__radio-style--red"></div>
                         </label>
@@ -311,7 +311,31 @@
             </div>
         </div>
     </section>
-
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__inner">
+                <a class="footer__link" href="#">Политика конфиденциальности</a>
+                <div class="footer__social">
+                    <a class="footer__social-link" href="#">
+                        <img class="footer__social-img" src="images/instagram.svg" alt="">
+                    </a>
+                    <a class="footer__social-link" href="#">
+                        <img class="footer__social-img" src="images/facebook.svg" alt="">
+                    </a>
+                </div>
+                <div class="footer__contacts">
+                    <a class="footer__contacts-link" href="tel:+380506777777">
+                        <img class="footer__contacts-img" src="images/phone.svg" alt="">
+                        <span>+38 050 677 77 77</span>
+                    </a>
+                    <a class="footer__contacts-link" href="mailto:elektrobikeukr@gmail.com">
+                        <img class="footer__contacts-img" src="images/mail.svg" alt="">
+                        <span>elektrobikeukr@gmail.com</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
