--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
                 <nav class="menu">
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Описание</a>
+                            <a class="menu__link" href="#info">Описание</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Характеристики</a>
+                            <a class="menu__link" href="#characteristics">Характеристики</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Cтоимость</a>
+                            <a class="menu__link" href="#price">Cтоимость</a>
                         </li>
                     </ul>
                 </nav>
@@ -37,7 +37,7 @@
     <section class="bike">
         <div class="container">
             <div class="bike__inner">
-                <div class="bike__columm">
+                <div class="bike__column">
                     <h1 class="bike__title">Xiaomi Himo C26</h1>
                      <h3 class="bike__subtitle">Электрический велосипед</h3>
                      <p class="bike__text">
@@ -46,9 +46,9 @@
                      <p class="bike__text">
                          HIMO C26 – это новый электровелосипед от Xiaomi, который создан как для езды по городу, так и бездорожью. Он имеет мощный двигатель и емкий аккумулятор, благодаря которым способен проезжать на одном заряде до 100 км, что определенно выше, чем у большинства конкурентов. А большие колеса с пневматическими шинами, дисковые тормоза, 7-скоростная трансмиссия и эргономичное сидение делают каждую поездку гораздо приятнее. 
                         </p>
-                        <a class="bike__link" href="#">ЗАКАЗАТЬ</a>
+                        <a class="bike__link" href="#price">ЗАКАЗАТЬ</a>
                 </div> 
-                <div class="bike__columm bike__column-slider">
+                <div class="bike__column bike__column-slider">
                     <div class="bike-slider">
                         <img class="bike-slider__item" src="images/bike-1.jpg" alt="">
                         <img class="bike-slider__item" src="images/bike-2.jpg" alt="">
@@ -77,7 +77,7 @@
             </div>
         </div>
     </section>
-    <section class="info">
+    <section class="info" id="info">
         <div class="container">
             <div class="info__inner">
                 <img class="info__img" src="images/info-img.jpg" alt="">
@@ -135,7 +135,7 @@
             </div>
         </div>
     </section>
-    <section class="characteristics">
+    <section class="characteristics" id="characteristics">
         <div class="container">
             <h4 class="characteristics__head">
                 Характеристики
@@ -265,7 +265,7 @@
             </div>
         </div>
     </div>
-    <section class="price">
+    <section class="price" id="price">
         <div class="container">
             <div class="price__inner">
                 <form class="form">
