--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+ 
 <body>
     <header class="header">
         <div class="container">
@@ -33,7 +34,7 @@
                 </nav>
             </div>
         </div>
-    </header>
+    </header> 
     <section class="bike">
         <div class="container">
             <div class="bike__inner">
@@ -276,7 +277,7 @@
                         Если Вы хотите заказать велосипед, оставьте свой контакт и наш менеджер перезвонит вам в ближайшее время
                     </p>
                     <input class="form__input-name" type="text" placeholder="имя">
-                    <input class="form__input-phone" type="tel" placeholder="телефон">
+                    <input class="form__input-phone" type="phone" placeholder="телефон">
                      <p class="form__input-text">
                         выберите желаемый цвет
                      </p>
@@ -336,7 +337,6 @@
             </div>
         </div>
     </footer>
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/slick.min.js "></script>
